[20020207]
* vertical mode and veriable column width mode are considered for reporting
  mouse position to console applications.
* -Q/--vcur/use_vertical_cursor option is added.
* mlconfig_curses([patch tracker 513620]) is updated. (thanks to Minami Hirokazu san)

[20020206]
* -Z/--multicol/use_multi_column_char option is added.

[20020206]
* if scrollbar_mode is none and window is resized , garbages are left
  on screen. fixed.
* w3mmlconfig is updated(around scrollbar_mode). 
  (thanks to Sakamoto Hironori san)

[20020206]
* -O/--sbpos/scrollbar_position option is removed and
  -O/--sbmod/scrollbar_mode option is added.
* scrollbar can be dynamically switched among off , right and left.
* default value of use_scrollbar option is true , not false.

[20020206]
* step in resizing window gets wrong. fixed.

[20020206]
* when font size is changed with right scrollbar , scrollbar is placed
  in strange position. fixed.

[20020205]
* -O/--sbpos/scrollbar_position option is added.
* processing brightness adjustment under transparent mode is tuned.
* doc/ja/README.ja is updated.

[20020205]
* cywin port patch is merged.(thanks to Tetsurou Okazaki san)
* XRegisterIMInstantiateCallback is never called on sunos.

[20020204]
* When CapsLock or NumLock is on , control mask or shift mask etc is not recogized.
  fixed. (Thanks to K.Kawabata san)
* cursor disappears when screen scrolled with scrollbar. fixed.
  (Thanks to Sakamoto Hironori san/Minami Hirokazu san)
* w3mmlconfig is updated.(thanks to Sakamoto Hironori san)
* baurates are explicitly set with cfsetispeed,cfsetospeed.(thanks to t-matsuo san)

[20020203]
* If --xim=false is specified , XRegisterIMInstatiateCallback is not done.

[20020203]
* mlterm dumps core under cjk vertical mode. fixed.
* doc/ja/README.ja doc/ja/FAQ doc/en/PROTOCOL are updated.

[20020203]
* cursor disappears under backscroll mode. fixed. (Thanks to Sakamoto Hironori san)